--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
-    <title>Inzamam Nirob PortFolio</title>
+    <title>Inzamam Nirob Portfolio</title>
     <script src="https://kit.fontawesome.com/5581ba7a1d.js" crossorigin="anonymous"></script>
 </head>
 <body>
